--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html, body {
     animation: floatBackground 10s ease-in-out infinite;
 
 }
-
 @keyframes floatBackground {
     0% { background-position: 0 0; }
     50% { background-position: 10px 20px; }
@@ -56,6 +55,15 @@ html, body {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+}
+
+.cursor {
+    display: inline-block;
+    margin-left: 5px;
+    animation: blink 1s infinite step-start;
+}
+@keyframes blink {
+    50% { opacity: 0; }
 }
 
 .slider-container {
